--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Responsive UI{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body>
     <header class="header"> 
         <div class="profile">
-            <img src="https://via.placeholder.com/50" alt="User Profile">
+            <img src="{% static 'images/profile.jpg' %}" alt="User Profile">
             <div class="greeting">
                 <h1>Welcome Back! {{ request.user }}</h1>
                 <p>Here are the latest Events...</p>
@@ -45,20 +47,25 @@
 
     <div id="menu" class="menu">
         <div class="menu-header">
-            <div class="user-details">
-                <img src="profile-pic-url" alt="Profile Picture" class="profile-pic">
-                <div class="user-info">
-                    <span class="username">John Doe</span>
-                    <p class="user-handle">@johndoe</p>
-                </div>
-            </div>
-            <span class="close-button" onclick="toggleMenu()">✖</span>
+    <div class="user-details">
+        <div class="profile-pic-wrapper">
+            <img src="{% static 'images/profile.jpg' %}" alt="Profile Picture" class="profile-pic">
         </div>
+        <div class="user-info">
+            <span class="username">{{ request.user }}</span>
+            <p class="user-handle">{{ profile.balance }}</p>
+        </div>
+    </div>
+    <span class="close-button" onclick="toggleMenu()">
+        <i class="fas fa-times"></i>
+    </span>
+</div>
+
         <ul class="menu-items">
-            <li><a href="#"><i class="icon-profile"></i>Profile</a></li>
-            <li><a href="#"><i class="icon-dashboard"></i>Dashboard</a></li>
-            <li><a href="#"><i class="icon-portfolio"></i>Portfolio</a></li>
-            <li class="logout"><a href="#"><i class="icon-logout"></i>Logout</a></li>
+            <li><a href="{% url 'profile' %}"><i class="fas fa-user icon-profile"></i>Profile</a></li>
+            <li><a href=""><i class="fas fa-tachometer-alt icon-dashboard"></i>Dashboard</a></li>
+            <li><a href="{% url 'dashboard' %}"><i class="fas fa-briefcase icon-portfolio"></i>Portfolio</a></li>
+            <li class="logout"><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt icon-logout"></i>Logout</a></li>
         </ul>
     </div>
 
