--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,13 +11,21 @@
 
         <!-- Content for Active Trades -->
         <div id="activeTrades" class="dash-content active">
+
             <div class="dash-trade-info">
-                <div class="dash-current-value">₹0.5</div>
-                <div class="dash-details">
-                    <span>₹0.5 Investment</span>
-                    <span>₹0 Live Gains</span>
+                <div class="dash-current-values">
+                    <div class="value-card total-investment">
+                        <span class="value-label">Investment</span>
+                        <span class="value-amount">₹299,836.80</span>
+                    </div>
+                    <div class="value-card total-returns">
+                        <span class="value-label">Returns</span>
+                        <span class="value-amount">₹6,000.00</span>
+                    </div>
                 </div>
+                
             </div>
+            
 
             {% for event, event_data in grouped_events.items %}
             <div class="dash-trade-card">
@@ -38,14 +46,25 @@
         <!-- Content for Closed Trades -->
         <div id="closedTrades" class="dash-content">
             <div class="dash-trade-info">
-                <div class="dash-current-value">- ₹299836.8</div>
+                
+                <div class="dash-current-values">
+                    
+                    <div class="value-card total-investment">
+                        <span class="value-label">Total Investment</span>
+                        <span class="value-amount">₹299,836.80</span>
+                    </div>
+                    <div class="value-card total-returns">
+                        <span class="value-label">Total Returns</span>
+                        <span class="value-amount">₹6,000.00</span>
+                    </div>
+                </div>
                 <div class="dash-details">
-                    <span>₹12182256.84 Investment</span>
-                    <span>₹-7400 Today's returns</span>
+                    <span class="details-label">Today's Returns</span>
+                    <span class="details-value">₹-7,400.00</span>
                 </div>
             </div>
+            
 
-           
             {% for event in closedevents %}
             <div class="dash-trade-card">
                 <div class="dash-info">
